# polaris-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.infra.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  process-compose.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_core_tables.py  0002_project_versions.py  0003_workspace_ide_url.py  0004_workspace_ide_port.py  0005_browser_sessions.py  0006_workspace_exec_audits.py  0007_drop_workspace_ide_port.py  0008_polaris_agent_schema.py  0009_drop_workspace_exec_audits.py  0010_workspace_project_root.py  0011_deployments_publish.py  0012_wds.py  0013_email_auth.py  0014_clarifications.py  0015_design_intents.py  0016_session_run_event.py  0017_unsplash_images.py  0018_design_intents_mood_board.py  0019_session_counters.py  15af4faf772c_drop_stale_ide_port_index.py
apps/api/src/polaris_api/: config.py  db.py  deps.py  main.py  mcp_app.py  models.py  queue.py  redis_client.py  schemas.py
apps/api/tests/: test_iconify.py  test_polaris_cli_audit.py  test_prepublish_audit_llm.py  test_publish_detect_stack.py  test_publish_sanitize.py  test_run_quota.py  test_unsplash.py  test_workspace_invariant.py
apps/worker/: pyproject.toml
apps/worker/src/polaris_worker/: clarification.py  codex_agents_md.py  config.py  main.py  monorepo.py  orchestrator.py  polaris_agent_prompt.py  queue.py  runner.py  sink.py
apps/worker/tests/: test_codex_agents_md.py  test_discovery_interrupt.py  test_orchestrator.py
docs/: API.md  ARCHITECTURE.md  (+8 more)
(+99 files in other folders)
