[project]
name = "polaris-worker"
version = "0.0.0"
description = "Background worker process for Polaris."
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "polaris-design-intent",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
polaris-worker = "polaris_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"
